Fixed letter spacing

--- a/static/index.css
+++ b/static/index.css
@@ -6,7 +6,7 @@
 }
 div h1{
     font-family: 'Roboto Slab', serif;
-    letter-spacing: 0.9rem;
+    letter-spacing: 0.3rem;
     color: firebrick;
     font-size: 2.5rem;
     padding-left: 80px;
